# infinite_text_world

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  STATUS.md  docker-compose.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: INDEX.md  SRC_INDEX.md
docs/10_product/: content-safety.md  requirements.md  roadmap.md  worldbuilding-and-tone.md
docs/20_design/: axiom-system.md  companion-system.md  dialogue-system.md  game-loop.md  item-system.md  nexus_and_travel_spec.md  npc-system.md  overlay-layer-system.md  quest-action-integration.md  quest-system.md  relationship-system.md  resolution-system.md  sub-grid.md  world-structure.md
docs/30_technical/: ai-provider.md  api-spec.md  architecture.md  db-schema-v2.md  db-schema.md  event-bus.md  i18n-policy.md  module-architecture.md  narrative-service.md  simulation-scope.md  world-layer-system.md
docs/40_operations/: ci-cd.md
src/: config.py  main.py
src/api/: game.py  health.py  schemas.py
src/core/: __init__.py  core_rule.py  (+9 more)
tests/: conftest.py  test_ai_provider.py  test_api_game.py  test_axiom.py  test_core_rule.py  test_echo_system.py  test_engine.py  test_event_bus.py  test_health.py  test_models_v2.py  test_narrative_service.py  test_navigator.py  test_npc_core.py  test_npc_memory.py  test_npc_module.py  test_npc_promotion.py  test_npc_service.py  test_persistence.py  test_relationship_attitude.py  test_relationship_core.py  test_relationship_module.py  test_relationship_service.py  test_sub_grid.py  test_world.py
(+127 files in other folders)
