[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "infinite_text_world"
version = "0.1.0"
description = "Infinite Text World"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.110",
    "google-generativeai>=0.3.0",
    "pydantic-settings>=2.0",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.29",
]

[project.optional-dependencies]
dev = [
    "httpx",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-cov",
    "ruff",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
